Add some audio settings and reorganize menus

--- a/src/android/res/xml/settings.xml
+++ b/src/android/res/xml/settings.xml
@@ -14,6 +14,13 @@
             app:allowDividerBelow="true" />
 
         <SwitchPreference
+            app:key="rom_in_ram"
+            app:title="Keep ROM in RAM"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true" />
+
+        <SwitchPreference
             app:key="fps_limiter"
             app:title="FPS Limiter"
             app:iconSpaceReserved="false"
@@ -21,18 +28,16 @@
             app:allowDividerBelow="true" />
 
         <SwitchPreference
-            app:key="mic_enable"
-            app:title="Use Microphone"
+            app:key="show_fps_counter"
+            app:title="Show FPS Counter"
             app:iconSpaceReserved="false"
             app:allowDividerAbove="true"
             app:allowDividerBelow="true" />
+    </PreferenceCategory>
 
-        <SwitchPreference
-            app:key="rom_in_ram"
-            app:title="Keep ROM in RAM"
-            app:iconSpaceReserved="false"
-            app:allowDividerAbove="true"
-            app:allowDividerBelow="true" />
+    <PreferenceCategory
+        app:title="Graphics Settings"
+        app:iconSpaceReserved="false">
 
         <SwitchPreference
             app:key="threaded_2d"
@@ -59,8 +64,34 @@
             app:allowDividerBelow="true" />
 
         <SwitchPreference
-            app:key="show_fps_counter"
-            app:title="Show FPS Counter"
+            app:key="screen_ghost"
+            app:title="Simulate Ghosting"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        app:title="Audio Settings"
+        app:iconSpaceReserved="false">
+
+        <SwitchPreference
+            app:key="emulate_audio"
+            app:title="Audio Emulation"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true" />
+
+        <SwitchPreference
+            app:key="audio_16_bit"
+            app:title="16-Bit Audio Output"
+            app:iconSpaceReserved="false"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true" />
+
+        <SwitchPreference
+            app:key="mic_enable"
+            app:title="Use Microphone"
             app:iconSpaceReserved="false"
             app:allowDividerAbove="true"
             app:allowDividerBelow="true" />
@@ -176,13 +207,6 @@
         <SwitchPreference
             app:key="gba_crop"
             app:title="GBA Crop"
-            app:iconSpaceReserved="false"
-            app:allowDividerAbove="true"
-            app:allowDividerBelow="true" />
-
-        <SwitchPreference
-            app:key="screen_ghost"
-            app:title="Simulate Ghosting"
             app:iconSpaceReserved="false"
             app:allowDividerAbove="true"
             app:allowDividerBelow="true" />
